@@ -25,6 +25,7 @@ Date: ????
     - Open gui by clicking the shortcut again instead
     - Use alt+scroll (vs shift+scroll) to set the quality instead
     - Support upgrading entities like 1.0.x could
+    - Begin supporting ghosts (eww, create_entity, lets not)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: 2024. 12. 12
